--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -33,12 +33,12 @@ requirements:
     - python
     - pip
     - setuptools >=78.1.1,<81
-    - if: win
+    - if: win and not is_freethreading
       then:
-        - cx_logging >=3.1
+        - cx_logging >=3.2
   run:
     - python
-    - filelock >=3.15.3
+    - filelock >=3.20.1
     - if: win
       then:
         - cabarchive >=0.2.4
@@ -58,10 +58,7 @@ tests:
     requirements:
       run:
         - coverage >=7.10.3
-        - pytest
-        - pytest-mock
-        - pytest-timeout
-        - pytest-xdist
+        - pytest >=9.0.2
     script:
       - coverage run
 
